img issu clear here

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- nav start here  -->
             <nav class="nav">
                 <div class="logo">
-                    <a href="index.html"><img src="images/Group 40071 (2).png" alt="logo"></a>
+                  <img src="images/Group 40071 (2).png" alt="logo">
                     <h3>Travel<span>Tore</span>  </h3>
                 </div>
 
