--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- nav start here  -->
             <nav class="nav">
                 <div class="logo">
-                  <img src="images/Group 40071 (2).png" alt="logo">
+                  <img src="images/Group 40071 (2).png" alt="Img is not found now">
                     <h3>Travel<span>Tore</span>  </h3>
                 </div>
 
