complite toure section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,30 @@
 
         </div>
     </header>
+
+
+    <!-- header section end here  -->
+
+    <main>
+        <!-- main section start Here  -->
+                <section class="tours">
+                    <div class="tours-container">
+                        <div class="tours-content">
+                            <h2>Comfort for Your Adventures</h2>
+                            <p>We understand the importance of comfort during your travels. Taavele Tore brings you a range of cozy travel pillows, compact blankets, and ergonomic travel essentials to ensure you arrive at your destination feeling refreshed and ready to explore.</p>
+                            <ul class="tours-ul">
+                                <li>Find the perfect gift for the travel enthusiast in your life. Our curated selection of travel-themed gifts ensures you'll always have the ideal present for birthdays, holidays, or any special occasion</li>
+                                <li>Travel with peace of mind knowing you have the essentials for a safe journey. Taavele Tore offers a selection of high-quality travel security items, including RFID-blocking wallets, anti-theft backpacks, and health and safety essentials for every traveler.</li>
+                                <li>Discover a collection of stylish and functional travel accessories that not only elevate your travel style but also make your journey more convenient. From chic luggage sets to versatile travel organizers, Taavele Tore has everything you need to travel with flai</li>
+                            </ul>
+                            <p>At Taavele Tore, we believe that every journey should be an adventure. Start your exploration today and gear up for unforgettable travels with the finest products from around the world. Your next destination awaits, and Taavele Tore is here to accompany you on the journey.</p>
+
+                            <div > <button class="tours-btn">See More</button> </div>
+                        </div>
+
+                        <div class="tours-imge"><img src="Images/Rectangle 4.png" alt="img is not found"></div>
+                    </div>
+                </section>
+        <!-- main section end here  -->
+    </main>
 </body>
-</html>
