img problem solving now

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- nav start here  -->
             <nav class="nav">
                 <div class="logo">
-                  <img src="images/Group 40071 (2).png" alt="Img is not found now">
+                  <img src="images/logo.jpg" alt="Img is not found now">
                     <h3>Travel<span>Tore</span>  </h3>
                 </div>
 
@@ -76,7 +76,7 @@
                             <div > <button class="tours-btn">See More</button> </div>
                         </div>
 
-                        <div class="tours-imge"><img src="Images/Rectangle 4.png" alt="img is not found"></div>
+                        <div class="tours-imge"><img src="images/Rectangle 4.png" alt="img is not found"></div>
                     </div>
                 </section>
         <!-- main section end here  -->
