image issu fix here

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div > <button class="tours-btn">See More</button> </div>
                         </div>
 
-                        <div class="tours-imge"><img src="images/Rectangle 4.png" alt="img is not found"></div>
+                        <div class="tours-imge"><img src="images/reacktengle4.png" alt="img is not found"></div>
                     </div>
                 </section>
         <!-- main section end here  -->
