complite distination section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main>
         <!-- main section start Here  -->
-                <section class="tours">
+                <section class="tours">  <!-- tours section -->
                     <div class="tours-container">
                         <div class="tours-content">
                             <h2>Comfort for Your Adventures</h2>
@@ -78,7 +78,44 @@
 
                         <div class="tours-imge"><img src="images/reacktengle4.png" alt="img is not found"></div>
                     </div>
+                </section>  <!------tours section end here -->
+
+                <!-- Destination section start here  -->
+
+                <section class="destiniation">
+                    <div class="destiniation-container">
+                        <h1>Choose Your Destination </h1>
+                        <p>Embark on a captivating adventure with us as we traverse the globe, visiting a multitude of enchanting destinations. From the vibrant streets of bustling cities to the serene beauty</p>
+
+                        <div class="sestiniation-place-img">
+                            <div class="place-img-div" id="maldip">
+                                <img src="images/maldips.jpg" alt="img is not found">
+                                
+                            </div>
+                            <div class="place-img-div" id="indonesia">
+                                <img src="images/indonesia.jpg" alt="img is not found">
+                            </div>
+                            <div class="place-img-div" id="srilanka">
+                                <img src="images/srilanka.jpg" alt="img is not found">
+                            </div>
+                            <div class="place-img-div" id="america">
+                                <img src="images/north-americaa.jpg" alt="img is not found">
+                            </div>
+                            <div class="place-img-div" id="kashmir">
+                                <img src="images/kashmir.jpg" alt="img is not found">
+                            </div>
+                            <div class="place-img-div" id="bangladesh">
+                                <img src="images/bangladesh.jpg" alt="img is not found">
+                            </div>
+                            <div class="place-img-div" id="bandorbon">
+                                <img src="images/bandorbon.jpg" alt="img is not found">
+                            </div>
+                        </div>
+                    </div>
                 </section>
         <!-- main section end here  -->
+
+
+
     </main>
 </body>
